fix: theme buttons gap

--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,9 +1,3 @@
-/*
-  Специально для тёмной темы при наличии класса,
-  здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
-
 .page.theme_dark {
   --accent-color: #FF0070;
   --main-bg-color: #00183F;
@@ -20,14 +14,3 @@
 .theme_dark .header__rec {
   display: block;
 }
-
-
-
-
-
-
-:root.theme-dark {
-  /* Дублируем переменные для тёмной темы */
-}
-
-/* Остальные стили */ 
