--- a/styles/style.css
+++ b/styles/style.css
@@ -72,9 +72,9 @@
 .header__theme-menu-list {
   display: flex;
   flex-direction: column;
-  gap: 10px;
-  list-style-type: none;
+  gap: 13px;
   margin-inline-end: 10px;
+  list-style-type: none;
 }
 
 .header__theme-menu-button {
@@ -117,10 +117,10 @@
   justify-self: end;
   align-self: center;
   max-width: 364px;
+  margin-inline-end: 10px;
   font-family: 'IBM Plex Mono', sans-serif;
   font-weight: 700;
   font-size: 18px;
-  margin-inline-end: 10px;
 }
 
 .title-decor {
@@ -134,28 +134,28 @@
 
 .main__title {
   display: block;
+  padding-block-end: 20px;
   color: var(--section-heading-color);
   font-family: 'IBM Plex Mono', sans-serif;
   font-size: 18px;
   line-height: 23.4px;
-  padding-block-end: 20px;
 }
 
 .main__title-section {
   display: block;
+  margin-block-end: 10px;
   font-family: 'IBM Plex Mono', sans-serif;
   line-height: 23.4px;
-  margin-block-end: 10px;
 }
 
 .main__text {
   display: block;
+  margin-block-end: 20px;
   color: var(--main-text-color);
   font-family: 'IBM Plex Mono', sans-serif;
   font-weight: 400;
   font-size: 18px;
   line-height: 23.4px;
-  margin-block-end: 20px;
 }
 
 .main__link {
@@ -219,28 +219,12 @@
 }
 
 @media (768px <= width < 1024px) {
-  .main {
-    margin: 0 20px;
-  }
-
-  .header {
-    margin-block-end: 60px;
-  }
-
   .header__theme-menu-list {
     padding-inline-end: 10px;
   }
 
-  .header__title {
-    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-  }
-
   .header__title-text {
     margin-inline-end: 20px;
-  }
-
-  .main__section {
-    margin-block-end: 80px;
   }
 
   .main__text-block {
@@ -249,17 +233,9 @@
     gap: 10px;
   }
 
-  .main__title {
-    padding: 0;
-  }
-
-  .main__title-section {
-    margin: 0;
-  }
-
   .main__title-list {
-    margin-block-end: 10px;
     margin-block-start: 0;
+    margin-block-end: 10px;
   }
 
   .main__list {
@@ -286,7 +262,7 @@
   .main__second-section {
     display: flex;
     flex-direction: column;
-    gap: 20px
+    gap: 20px;
   }
 
   .title-area-second-section {
@@ -299,11 +275,37 @@
     grid-template-rows: auto;
     gap: 20px;
   }
+}
+
+@media (width > 767px) {
+  .main {
+    margin: 0 20px;
+  }
+
+  .header {
+    margin-block-end: 60px;
+  }
+
+  .header__title {
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
+
+  .main__section {
+    margin-block-end: 80px;
+  }
+
+  .main__title {
+    padding: 0;
+  }
+
+  .main__title-section {
+    margin: 0;
+  }
 
   .container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 192px 230px 318px;
+    grid-template-rows: 260px 315px 428px;
     grid-template-areas:
       "sunset sunset ice-cream"
       "tape books ice-cream"
@@ -343,35 +345,19 @@
 }
 
 @media (width > 1023px) {
-  .main {
-    margin: 0 20px;
-  }
-
-  .header {
-    margin-block-end: 60px;
-  }
-
   .header__theme-menu {
     justify-self: center;
     align-self: start;
   }
 
   .header__theme-menu-list {
-    padding-block-start: 20px;
     flex-direction: row;
-  }
-
-  .header__title {
-    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    padding-block-start: 20px;
   }
 
   .header__title-text {
-    margin-inline-end: 20px;
     max-width: 491px;
-  }
-
-  .main__section {
-    margin-block-end: 80px;
+    margin-inline-end: 20px;
   }
 
   .main__text-block {
@@ -380,17 +366,9 @@
     gap: 10px;
   }
 
-  .main__title {
-    padding: 0;
-  }
-
-  .main__title-section {
-    margin: 0;
-  }
-
   .main__title-list {
-    margin-block-end: 10px;
     margin-block-start: 0;
+    margin-block-end: 10px;
   }
 
   .main__list {
@@ -439,46 +417,5 @@
 
   .text-area-second-section_2 {
     grid-area: 3 / 2 / 4 / 3;
-  }
-
-  .container {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 260px 315px 428px;
-    grid-template-areas:
-      "sunset sunset ice-cream"
-      "tape books ice-cream"
-      "tape street street";
-    justify-items: stretch;
-    gap: 20px;
-    margin-block-start: 20px;
-  }
-
-  .sunset {
-    grid-area: sunset;
-  }
-  
-  .ice-cream {
-    grid-area: ice-cream;
-  }
-  
-  .tape {
-    grid-area: tape;
-  }
-  
-  .books {
-    grid-area: books;
-  }
-  
-  .street {
-    grid-area: street;
-  }
-
-  .footer {
-    margin-block-start: 60px;
-  }
-
-  .footer__title {
-    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   }
 }
